--- a/sub/simmons/scss/simmons.scss
+++ b/sub/simmons/scss/simmons.scss
@@ -58,14 +58,14 @@ body {
                 display: flex;
                 align-items: center;
                 width: 100%;
-                height: 50px;
+                height: 60px;
 
                 @include responsive(tablet-size) {
-                    height: 55px;
+                    height: 90px;
                 }
 
                 @include responsive(pc-size) {
-                    height: 60px;
+                    height: 95px;
                 }
 
                 .logo {
@@ -73,13 +73,13 @@ body {
                     margin-left: 20px;
 
                     @include responsive(tablet-size) {
-                        width: 5%;
-                        margin-left: 30px;
+                        width: 7%;
+                        margin-left: 40px;
                     }
 
                     @include responsive(pc-size) {
-                        width: 4%;
-                        margin-left: 40px;
+                        width: 6%;
+                        margin-left: 45px;
                     }
                 }
 
@@ -88,13 +88,13 @@ body {
                     margin-right: 20px;
 
                     @include responsive(tablet-size) {
-                        width: 4%;
-                        margin-left: 30px;
+                        width: 6%;
+                        margin-right: 40px;
                     }
 
                     @include responsive(pc-size) {
-                        width: 3%;
-                        margin-left: 40px;
+                        width: 5%;
+                        margin-right: 45px;
                     }
 
                     img {
@@ -106,10 +106,34 @@ body {
     }
 
     main {
+
         #mockup {
+            position: relative;
             width: 100%;
             margin-top: 50px;
-            padding: 0 30px;
+            padding: 0 25px;
+
+            @include responsive(tablet-size) {
+                padding: 0 50px;
+            }
+
+            @include responsive(pc-size) {
+                padding: 0 75px;
+            }
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 85%;
+                left: 50%;
+                width: 92%;
+                height: 60%;
+                background-color: $font-color;
+                border-radius: 5 0%;
+                z-index: -1;
+
+                transform: translate(-50%);
+            }
 
             .wrapper {
                 @include wrapper;
@@ -121,7 +145,71 @@ body {
                     }
                     letter-spacing: -2.5px;
                     color: $font-color;
+                    margin-left: 10px;
+                    margin-bottom: 40px;
+
+                    @include responsive(tablet-size) {
+                        font: {
+                            size: 4.5em;
+                        }
+                        margin-bottom: 70px;
+                    }
+
+                    @include responsive(pc-size) {
+                        font: {
+                            size: 5.5em;
+                        }
+                        margin-bottom: 110px;
+                    }
                 }
+
+                img {
+                    width: 95%;
+                    margin: 0 auto;
+
+                    @include responsive(tablet-size) {
+                        width: 80%;
+                    }
+
+                    @include responsive(pc-size) {
+                        width: 65%;
+                    }
+                }
+            }
+        }
+
+        #about {
+            position: relative;
+
+            width: 100%;
+            margin-top: 60px;
+            padding: 0 25px;
+
+            @include responsive(tablet-size) {
+                padding: 0 50px;
+            }
+
+            @include responsive(pc-size) {
+                padding: 0 75px;
+            }
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 00%;
+                left: 50%;
+                width: 92%;
+                height: 140%;
+                background-color: $font-color;
+                z-index: -1;
+
+                transform: translate(-50%);
+            }
+
+            .wrapper {
+                @include wrapper;
+
+
             }
         }
     }
