--- a/sub/simmons/scss/style.scss
+++ b/sub/simmons/scss/style.scss
@@ -1,6 +1,7 @@
 $font : 'NanumSquareRound';
 
-$font-color : #fff8fc;
+$color : #fff8fc;
+$fonh : #222222;
 
 $break-mobile: 320px;
 $break-tablet: 768px;
